Add eas build info

--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "74fb92a8-1fe6-4388-9521-5db821f705d6"
+      }
     }
   }
 }
